--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,9 +43,9 @@ body {
   background-color: #756257;
   text-transform: uppercase;
 }
-.wrap-figure{
+.wrap-figure {
   background-image: url(../images/main-background.jpg);
-  background-size: 1200px 485px;
+  background-size: 100% auto;
   background-repeat: no-repeat;
 }
 .main-description {
@@ -60,11 +60,13 @@ body {
 
 }
 .main-description h2 {
+  font-family: "PT Sans", sans-serif;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
+  text-transform: uppercase;
 }
-.advantages-title {
+.advantages-title, .advantages-item-inside-title {
   font-family: "PT Sans", sans-serif;
   font-size: 24px;
   line-height: 28px;
@@ -72,6 +74,7 @@ body {
   color: #000000;
   background-color: #FFFFFF;
   text-decoration: none;
+  text-transform: uppercase;
 }
 .main-search {
   font-family: "PT Sans", sans-serif;
@@ -84,12 +87,14 @@ body {
   text-decoration: none;
 }
 .main-search-title {
+  font-family: "PT Sans", sans-serif;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   text-transform: uppercase;
 }
 .button-search {
+  font-family: "PT Sans", sans-serif;
   font-size: 20px;
   line-height: 36px;
   font-weight: 700;
@@ -108,16 +113,16 @@ body {
   color: #ffffff;
   background-color: #000000;
   background-image: url(../images/mailing-background.jpg);
-  background-size: 1200px 411px;
+  background-size: 100% auto;
   background-repeat: no-repeat;
 }
-.mailing-title{
+.mailing-title {
   font-family: "PT Sans", sans-serif;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
   text-align: center;
-  color: #ffffff;
+  color: #FFFFFF;
   text-transform: uppercase;
   text-decoration: none;
 }
@@ -131,7 +136,142 @@ body {
   text-decoration: none;
 }
 .filter-header {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: 400;
+  color: #FFFFFF;
+  background-color:#000000;
+  text-decoration: none;
   background-image: url(../images/catalog-background.jpg);
-  background-size: 1200px 411px;
+  background-size: 100% auto;
   background-repeat: no-repeat;
 }
+.filter-header-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 60px;
+  line-height: 78px;
+  font-weight: 700;
+}
+.breadcrumbs-link-hotels {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 400;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+.catalog-filter-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+}
+.apply-button {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #83B3D3;
+  text-transform: uppercase;
+}
+.reset-button {
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: 400;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: inherit;
+  border: 0;
+}
+.sorting-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  line-height: 39px;
+  font-weight: 700;
+}
+.hotel-card-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 24px;
+  line-height: 31px;
+  font-weight: 700;
+  color: #000000;
+  background-color: inherit;
+  text-decoration: none;
+}
+.hotel-detail-button {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #756257;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.add-to-favorites-button {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #83B3D3;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.add-to-favorites-button-in-favorites {
+  background-color: #7DB54F;
+}
+.rating {
+  font-family: "PT Sans", sans-serif;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 400;
+  text-align: center;
+  color: #000000;
+  background-color: #f2f2f2;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.hotel-list-pages {
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #83B3D3;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.catalog-mailing {
+  text-align: center;
+}
+.catalog-mailing-title {
+  font-family: "PT Sans", sans-serif;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 700;
+  text-align: center;
+  color: #000000;
+  background-color: #FFFFFF;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.catalog-mailing-button, .mailing-button {
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+  text-align: center;
+  color: #FFFFFF;
+  background-color: #83B3D3;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
